# tinkoff-invest-haskell

./: .gitignore  README.md  stack.yaml
example/: package.yaml  tinkoff-invest-example.cabal
example/src/: Main.hs  MarketDataStreamClient.hs  SandBoxClient.hs  SimpleClient.hs
sdk/: .stylish-haskell.yaml  LICENSE  package.yaml  tinkoff-invest-sdk.cabal
sdk/proto/google/protobuf/: descriptor.proto
sdk/proto/invest/: common.proto  instruments.proto  marketdata.proto  operations.proto  orders.proto  sandbox.proto  stoporders.proto  users.proto
sdk/src/: Client.hs
sdk/src/Client/: Errors.hs  Helpers.hs
sdk/src/Invest/: Client.hs
sdk/src/Invest/Client/: Errors.hs  Helpers.hs
sdk/src/Invest/Service/: Instruments.hs  MarketData.hs  MarketDataStream.hs  Operations.hs  Orders.hs  Sandbox.hs  StopOrders.hs  Users.hs
sdk/src/Invest/Service/Internal/: MarketDataStream.hs
sdk/src/Service/: Instruments.hs  MarketData.hs  MarketDataStream.hs  Operations.hs  Orders.hs  Sandbox.hs  StopOrders.hs  Users.hs
sdk/src/Service/Internal/: MarketDataStream.hs
