cabal-version:  2.0
name:           tinkoff-invest-sdk
version:        0.0.2.0
synopsis:       gRPC based SDK for Tinkoff Invest API V2
description:    Simple gRPC based SDK for Tinkoff Invest API V2
category:       Finance
homepage:       https://github.com/nickmi11er/tinkoff-invest-haskell#readme
author:         Nick Miller
maintainer:     nickmiller.on@gmail.com
copyright:      Copyright (c) 2022 Nick Miller
license:        MIT
license-file:   LICENSE
build-type:     Custom

extra-source-files:
    proto/google/protobuf/descriptor.proto
    proto/google/protobuf/timestamp.proto
    proto/google/api/field_behavior.proto
    proto/common.proto
    proto/instruments.proto
    proto/marketdata.proto
    proto/operations.proto
    proto/orders.proto
    proto/sandbox.proto
    proto/stoporders.proto
    proto/users.proto

custom-setup
  setup-depends:
      Cabal             >= 3.4.1.0
    , base              >= 4.15.1.0
    , proto-lens-setup  >= 0.4.0.7

library
  exposed-modules:
      Client
      Client.Helpers
      Service.Instruments
      Service.MarketData
      Service.MarketDataStream
      Service.Operations
      Service.Orders
      Service.Sandbox
      Service.StopOrders
      Service.Users
      Paths_tinkoff_invest_sdk
      Proto.Google.Protobuf.Descriptor
      Proto.Google.Protobuf.Timestamp
      Proto.Google.Protobuf.Timestamp_Fields
      Proto.Google.Api.FieldBehavior
      Proto.Common
      Proto.Common_Fields
      Proto.Instruments
      Proto.Instruments_Fields
      Proto.Marketdata
      Proto.Marketdata_Fields
      Proto.Operations
      Proto.Operations_Fields
      Proto.Orders
      Proto.Orders_Fields
      Proto.Sandbox
      Proto.Sandbox_Fields
      Proto.Stoporders
      Proto.Stoporders_Fields
      Proto.Users
      Proto.Users_Fields
  other-modules:
      Client.Errors
      Service.Internal.MarketDataStream
  autogen-modules:
      Paths_tinkoff_invest_sdk
      Proto.Google.Protobuf.Timestamp
      Proto.Google.Protobuf.Timestamp_Fields
      Proto.Common
      Proto.Common_Fields
      Proto.Instruments
      Proto.Instruments_Fields
      Proto.Marketdata
      Proto.Marketdata_Fields
      Proto.Operations
      Proto.Operations_Fields
      Proto.Orders
      Proto.Orders_Fields
      Proto.Sandbox
      Proto.Sandbox_Fields
      Proto.Stoporders
      Proto.Stoporders_Fields
      Proto.Users
      Proto.Users_Fields
  hs-source-dirs:
      src
  default-extensions:
      LambdaCase
      DataKinds
      UnicodeSyntax
  build-depends:
      async                 >= 2.2.4
    , base                  >= 4.15.1.0
    , bytestring            >= 0.10.12.1
    , concurrent-extra      == 0.7.*
    , errors                >= 2.3.0
    , http2-client          >= 0.10.0.1
    , http2-client-grpc     >= 0.8.0.0
    , http2-grpc-types      >= 0.5.0.0
    , http2-grpc-proto-lens >= 0.1.0.0
    , lens                  >= 5.0.1
    , mtl                   >= 2.2.2
    , proto-lens            >= 0.7.1.1
    , proto-lens-runtime    >= 0.7.0.2
    , text                  >= 1.2.5.0
    , unordered-containers  >= 0.2.17.0
    , mtl
    , transformers
  default-language: Haskell2010
  ghc-options: -Wall
